--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Stephanie Marker</title>
   </head>
   <body>
+    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
